# sentinel

./: .gitignore  Cargo.toml  PROJECT.md  README.md
docs/: SPEC.md
src/: analyze.rs  cli.rs  git.rs  main.rs  model.rs  report.rs  store.rs
