[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "Regression watcher — historical fragility matrix and risky-file warnings for agents"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
